--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/nodemailer": "^7.0.3",
     "autoprefixer": "^10.4.22",
     "axios": "^1.13.2",
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
+    "nodemailer": "^7.0.10",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
